<resources>
    <string name="app_name">Warsmash</string>
    <string name="game_files">Game files</string>
    <string name="general_settings">General settings</string>
    <string name="user_interface">User interface</string>
    <string name="copy_game_assets">Reset game assets</string>
    <string name="hide_screen_controls">Hide screen controls</string>
    <string name="display_cutout_area">Display in cutout area</string>
    <string name="configure_screen_controls">Configure screen controls</string>
    <string name="graphics">Graphics</string>
    <string name="ok_text">OK</string>
    <string name="can_not_start_game">cfg ini file does not exist, so the game cannot be launched</string>
    <string name="custom_resolution">Custom Resolution</string>
    <string name="hud_scaling">Hud scale</string>
    <string name="cursor_scaling">Cursor scale</string>
    <string name="font_size">Font size</string>
    <string name="text_localization_title">Text localization</string>
    <string name="audio_localization_title">Audio localization</string>
    <string name="btn_back">Back</string>
    <string name="btn_opacityPlus">Alpha+</string>
    <string name="btn_opacityMinus">Alpha-</string>
    <string name="btn_sizePlus">Size+</string>
    <string name="btn_sizeMinus">Size-</string>
    <string name="btn_resetControlsLayout">Reset to defaults</string>
    <string name="text_localization_default_entry">english</string>
    <string name="command_line">Custom cmd args</string>
    <string name="custom_resolution_hint">640x480</string>
    <string name="start_game">Start Game</string>

    <string-array name="text_localization_entries">
        <item>english</item>
        <item>russian</item>
        <item>francais</item>
    </string-array>

    <string-array name="audio_localization_entries">
        <item>english</item>
        <item>russian</item>
        <item>deutsch</item>
        <item>francais</item>
    </string-array>

</resources>