<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general_settings">
        <Preference
            android:key="game_files"
            android:title="@string/game_files" />
        <ListPreference
            android:defaultValue="@string/tft_game_version"
            android:dialogTitle="@string/game_version"
            android:entries="@array/game_type"
            android:entryValues="@array/game_type"
            android:key="@string/game_version"
            android:summary="%s"
            android:title="@string/game_version" />

        <EditTextPreference
            android:dialogTitle="@string/player_count"
            android:key="players_count"
            android:defaultValue="28"
            android:title="@string/player_count" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/user_interface">
        <Preference
            android:key="screen_controls_settings"
            android:title="@string/configure_screen_controls" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hide_screen_controls"
            android:title="@string/hide_screen_controls" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/graphics">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="display_cutout_area"
            android:title="@string/display_cutout_area" />
    </PreferenceCategory>
</PreferenceScreen>